name:                renzu
version:             0.0.0.0
-- synopsis:
-- description:
homepage:            https://github.com/acple/renzu#readme
license:             BSD3
license-file:        LICENSE
author:              acple
maintainer:          silentsphere110@gmail.com
copyright:           2017 acple
category:            Lenses
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Renzu
                       Renzu.Getter
                       Renzu.Index
                       Renzu.Indexable
                       Renzu.Iso
                       Renzu.Lens
                       Renzu.Optic
                       Renzu.Prism
                       Renzu.Profunctor
                       Renzu.Setter
                       Renzu.Tuple
  other-modules:       Renzu.Profunctor.Capture
                       Renzu.Profunctor.Class
                       Renzu.Profunctor.Forget
                       Renzu.Profunctor.Indexed
                       Renzu.Profunctor.Re
                       Renzu.Profunctor.Wrapped
  build-depends:       base >= 4.9 && < 5,
                       mtl >= 2.2.1
  ghc-options:         -O2 -Wall -Wunsafe
  default-language:    Haskell2010
  default-extensions:  RankNTypes
                       FlexibleContexts
  other-extensions:    MultiParamTypeClasses
                       FlexibleInstances
                       FunctionalDependencies
                       TypeFamilies

source-repository head
  type:     git
  location: https://github.com/acple/renzu
